--- a/index.html
+++ b/index.html
@@ -5,32 +5,33 @@
 	<title>Тест для старшей школы | Оренбург</title>
 	<script type="text/javascript" src="./test.json"></script>
 	<script src="./script.js"></script>
+	<script src="./jquery.js"></script>	
 	<script src="./bootstrap.min.js"></script>
-	<script src="./jquery.js"></script>
-	<link rel="stylesheet" href="./bootstrap.min.css">
+	<link rel="stylesheet" href="./bootstrap3.3.7.css">
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<!-- <nav class="navbar navbar-light light-blue lighten-4">
-	  <a class="navbar-brand" href="#">Navbar</a>
-	  <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-	    aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
-	        class="fas fa-bars fa-1x"></i></span>
-	  </button>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Features</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Pricing</a>
-		      </li>
-		    </ul>
-		  </div>
-</nav> -->
+<script src="./jquery.js"></script>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main">
+				    <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+		    	</button>
+				<a class="navbar-brand" href="https://github.com/lexapetrov" title="Перейти на сайт разработчиков">👋👨🏻‍💻</a>
+		    </div>
+			    <div class="collapse navbar-collapse" id="navbar-main">
+					 <ul class="nav navbar-nav">
+				        <li class="active"><a href="#">Главная</a></li>
+				        <li><a href="#">О системе</a></li>
+				        <li><a href="#">Как пользоваться</a></li>
+				        <li><a href="#">Контакты</a></li>
+      				</ul>
+			    </div>
+		</div>
+	</nav>
 		<div class="container">
 			<main>
 				<div class="row">
