Добавляет выгрузку логов на компьютер. Запрещает мультиселект среди радиобаттонов.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 							<div id="question">
 
 							</div>
-							<div id="answers" class="answers">
+							<form id="answers" class="answers">
 
-							</div>
+							</form>
 							<div class="navbutton">
 								<a href="#" onclick="next();" class="btn btn-success nextquestion" id="next">Следующий вопрос</a>
 								<a href="#" id="canceltest" onclick="complete();" class="btn btn-danger canceltest">Завершить тест</a>
@@ -61,6 +61,7 @@
 				</div>
 				<div class="hidden" id="result">
 					<h4 id="result-brief"></h4>
+					<a href="" id="a">Скачать отчёт</a>
 					<table id="result-table"/>
 				</div>
 			</main>
