--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			    <div class="collapse navbar-collapse" id="navbar-main">
 					 <ul class="nav navbar-nav">
 				        <li class="active"><a href="index.html">Главная</a></li>
-				        <li><a href="#">О системе</a></li>
+				        <li><a href="#" onclick="sendMail()">О системе</a></li>
 				        <li><a href="#">Как пользоваться</a></li>
 				        <li><a href="#">Контакты</a></li>
       				</ul>
