--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			    <div class="collapse navbar-collapse" id="navbar-main">
 					 <ul class="nav navbar-nav">
 				        <li class="active"><a href="index.html">Главная</a></li>
-				        <li><a href="#" onclick="sendMail()">О системе</a></li>
+				        <li><a href="#">О системе</a></li>
 				        <li><a href="#">Как пользоваться</a></li>
 				        <li><a href="#">Контакты</a></li>
       				</ul>
@@ -71,6 +71,7 @@
 				<div class="hidden" id="result">
 					<h4 id="result-brief"></h4>
 					<a href="" id="a" class="btn btn-success">Скачать отчёт</a>
+					<a href="#" onclick="sendMail();" class="btn btn-info">Отправить на почту</a>
 				<!-- 	<a href="" onclick="printdata();" class="btn btn-info">Распечатать отчёт</a> -->
 					<table id="result-table"/>
 				</div>		
