--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 						<div class="check-results" id="check-results">
 							<p>Введите уникальный код вашего резуьтата тестирования:</p>
 							<p><input type="text" name="" class="checkinput" placeholder="введите ваш код здесь"></input> <a href="#" class="btn btn-success" onclick="checkres();">Посмотреть результат</a></p>
+							<div class="checked-results" id="checked-results">
+								
+							</div>
 						</div>
 						<div>
 							<p>Понравилось? Поделитесь в социальных сетях.
