--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 						</div>
 						<div class="check-results" id="check-results">
 							<p>Введите уникальный код вашего резуьтата тестирования:</p>
-							<p><input type="text" name="" class="checkinput" placeholder="введите ваш код здесь"></input> <a href="#" class="btn btn-success" onclick="checkres();">Посмотреть результат</a></p>
-							<div class="checked-results" id="checked-results">
+							<p><input type="text" name="" class="checkinput" id="checkinput" placeholder="введите ваш код здесь"></input> <a href="#" class="btn btn-success" onclick="checkres();">Посмотреть результат</a></p>
+							<textarea class="checked-results" id="checked-results" rows="5" readonly cols="150">
 								
-							</div>
+							</textarea>
 						</div>
 						<div>
 							<p>Понравилось? Поделитесь в социальных сетях.
