--- a/about.html
+++ b/about.html
@@ -4,6 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Проверь свои знания по информационной безопасности | Оренбург</title>
 	<script type="text/javascript" src="./test.json"></script>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(53097058, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/53097058" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	<script src="./script.js"></script>
 	<script src="./jquery.js"></script>
 	<script src="./bootstrap.min.js"></script>
@@ -22,8 +37,8 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		    	</button>
-				<a class="navbar-brand" href="https://github.com/lexapetrov" title="Разработчик: Алексей Петров"><img class="smile" src="img/dev2.png" alt="🧔"></a>
-				<a class="navbar-brand" href="https://github.com/romanchumakov" title="Разработчик: Роман Чумаков"><img class="smile" src="img/dev1.png" alt="💁‍♂"></a>
+				<a class="navbar-brand" href="https://github.com/lexapetrov" title="Разработчик: Алексей Петров"><img class="smile" src="img/dev4.png" alt="🧔"></a>
+				<a class="navbar-brand" href="https://github.com/romanchumakov" title="Разработчик: Роман Чумаков"><img class="smile" src="img/dev5.png" alt="💁‍♂"></a>
 		    </div>
 			    <div class="collapse navbar-collapse" id="navbar-main">
 					 <ul class="nav navbar-nav">
